[package]
name = "kaggle-rs"
version = "1.0.0"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
edition = "2018"
license = "MIT or Apache 2.0"
description = "Unofficial rust implementation of the kaggle api"
[badges]
travis-ci = { repository = "https://github.com/mattsse/kaggle-rs" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.7"
serde_json = "1.0"
base64 = "~0.7.0"
futures = "0.1.16"
chrono = "0.4"
reqwest = "0.10"

[dev-dependencies]
tokio-core = "*"
