[package]
name = "kaggle"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
edition = "2018"
license = "Apache-2.0"
description = "Unofficial rust implementation of the kaggle api"
documentation = "https://docs.rs/kaggle/"
categories = ["science", "web-programming"]
keywords = ["kaggle", "data-science", "datasets"]
 
repository = "https://github.com/mattsse/kaggle-rs"
 
[badges]
travis-ci = { repository = "https://github.com/mattsse/kaggle-rs" }


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.11"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["json", "stream"] }
tempdir = "0.3"
anyhow = "1.0"
dirs = "2.0"
tokio = { version = "0.2", features = ["fs", "io-util"] }
tokio-util = { version = "0.3", features = ["codec"] }
bytes = "0.5"
zip = "0.5"
thiserror = "1.0"
tar = "0.4"
walkdir = "2.3"
slug = "0.1"
log = "0.4.8"
flate2 = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }

