[package]
name = "kaggle"
version = "1.0.3"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
edition = "2018"
license = "Apache-2.0"
description = "Unofficial rust implementation of the kaggle api"
documentation = "https://docs.rs/kaggle/"
categories = ["science", "web-programming"]
keywords = ["kaggle", "data-science", "datasets"]
 
repository = "https://github.com/mattsse/kaggle-rs"
 
[badges]
travis-ci = { repository = "https://github.com/mattsse/kaggle-rs" }


[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
base64 = "0.22.1"
futures = "0.3.31"
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json", "stream", "multipart"] }
tempdir = "0.3.7"
anyhow = "1.0.95"
dirs = "6.0.0"
tokio = { version = "1.43.0", features = ["fs", "io-util", "rt-multi-thread"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
bytes = "1.9.0"
zip = "2.2.2"
thiserror = "2.0.11"
tar = "0.4.43"
walkdir = "2.5.0"
slug = "0.1.6"
log = "0.4.25"
flate2 = "1.0.35"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros"] }

